copys wasms for incbin

--- a/unittests/CMakeLists.txt
+++ b/unittests/CMakeLists.txt
@@ -36,6 +36,40 @@ link_directories(${LLVM_LIBRARY_DIR})
 add_subdirectory(contracts)
 
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/contracts.hpp.in ${CMAKE_CURRENT_BINARY_DIR}/include/contracts.hpp ESCAPE_QUOTES)
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/contracts/fuzz1.wasm ${CMAKE_CURRENT_BINARY_DIR}/fuzz1.wasm COPYONLY)
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/contracts/fuzz2.wasm ${CMAKE_CURRENT_BINARY_DIR}/fuzz2.wasm COPYONLY)
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/contracts/fuzz3.wasm ${CMAKE_CURRENT_BINARY_DIR}/fuzz3.wasm COPYONLY)
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/contracts/fuzz4.wasm ${CMAKE_CURRENT_BINARY_DIR}/fuzz4.wasm COPYONLY)
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/contracts/fuzz5.wasm ${CMAKE_CURRENT_BINARY_DIR}/fuzz5.wasm COPYONLY)
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/contracts/fuzz6.wasm ${CMAKE_CURRENT_BINARY_DIR}/fuzz6.wasm COPYONLY)
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/contracts/fuzz7.wasm ${CMAKE_CURRENT_BINARY_DIR}/fuzz7.wasm COPYONLY)
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/contracts/fuzz8.wasm ${CMAKE_CURRENT_BINARY_DIR}/fuzz8.wasm COPYONLY)
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/contracts/fuzz9.wasm ${CMAKE_CURRENT_BINARY_DIR}/fuzz9.wasm COPYONLY)
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/contracts/fuzz10.wasm ${CMAKE_CURRENT_BINARY_DIR}/fuzz10.wasm COPYONLY)
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/contracts/fuzz11.wasm ${CMAKE_CURRENT_BINARY_DIR}/fuzz11.wasm COPYONLY)
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/contracts/fuzz12.wasm ${CMAKE_CURRENT_BINARY_DIR}/fuzz12.wasm COPYONLY)
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/contracts/fuzz13.wasm ${CMAKE_CURRENT_BINARY_DIR}/fuzz13.wasm COPYONLY)
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/contracts/fuzz14.wasm ${CMAKE_CURRENT_BINARY_DIR}/fuzz14.wasm COPYONLY)
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/contracts/fuzz15.wasm ${CMAKE_CURRENT_BINARY_DIR}/fuzz15.wasm COPYONLY)
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/contracts/big_allocation.wasm ${CMAKE_CURRENT_BINARY_DIR}/big_allocation.wasm COPYONLY)
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/contracts/crash_section_size_too_big.wasm ${CMAKE_CURRENT_BINARY_DIR}/crash_section_size_too_big.wasm COPYONLY)
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/contracts/leak_no_destructor.wasm ${CMAKE_CURRENT_BINARY_DIR}/leak_no_destructor.wasm COPYONLY)
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/contracts/leak_readExports.wasm ${CMAKE_CURRENT_BINARY_DIR}/leak_readExports.wasm COPYONLY)
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/contracts/leak_readFunctions.wasm ${CMAKE_CURRENT_BINARY_DIR}/leak_readFunctions.wasm COPYONLY)
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/contracts/leak_readFunctions_2.wasm ${CMAKE_CURRENT_BINARY_DIR}/leak_readFunctions_2.wasm COPYONLY)
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/contracts/leak_readFunctions_3.wasm ${CMAKE_CURRENT_BINARY_DIR}/leak_readFunctions_3.wasm COPYONLY)
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/contracts/leak_readGlobals.wasm ${CMAKE_CURRENT_BINARY_DIR}/leak_readGlobals.wasm COPYONLY)
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/contracts/leak_readImports.wasm ${CMAKE_CURRENT_BINARY_DIR}/leak_readImports.wasm COPYONLY)
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/contracts/leak_wasm_binary_cpp_L1249.wasm ${CMAKE_CURRENT_BINARY_DIR}/leak_wasm_binary_cpp_L1249.wasm COPYONLY)
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/contracts/readFunctions_slowness_out_of_memory.wasm ${CMAKE_CURRENT_BINARY_DIR}/readFunctions_slowness_out_of_memory.wasm COPYONLY)
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/contracts/locals-yc.wasm ${CMAKE_CURRENT_BINARY_DIR}/locals-yc.wasm COPYONLY)
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/contracts/locals-s.wasm ${CMAKE_CURRENT_BINARY_DIR}/locals-s.wasm COPYONLY)
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/contracts/slowwasm_localsets.wasm ${CMAKE_CURRENT_BINARY_DIR}/slowwasm_localsets.wasm COPYONLY)
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/contracts/getcode_deepindent.wasm ${CMAKE_CURRENT_BINARY_DIR}/getcode_deepindent.wasm COPYONLY)
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/contracts/indent-mismatch.wasm ${CMAKE_CURRENT_BINARY_DIR}/indent-mismatch.wasm COPYONLY)
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/contracts/deep_loops_ext_report.wasm ${CMAKE_CURRENT_BINARY_DIR}/deep_loops_ext_report.wasm COPYONLY)
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/contracts/80k_deep_loop_with_ret.wasm ${CMAKE_CURRENT_BINARY_DIR}/80k_deep_loop_with_ret.wasm COPYONLY)
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/contracts/80k_deep_loop_with_void.wasm ${CMAKE_CURRENT_BINARY_DIR}/80k_deep_loop_with_void.wasm COPYONLY)
 
 ### BUILD UNIT TEST EXECUTABLE ###
 file(GLOB UNIT_TESTS "*.cpp") # find all unit test suites
