--- a/.cicd/pipeline.yml
+++ b/.cicd/pipeline.yml
@@ -4,6 +4,8 @@ env:
   TIMEOUT: 120
   VERBOSE: true
 
+steps:
+
   - label: ":aws: [Amazon] 2 Build"
     command:
       - "mkdir /eos/build && cd /eos/build && cmake -DCMAKE_BUILD_TYPE='Release' -DCORE_SYMBOL_NAME='SYS' -DOPENSSL_ROOT_DIR='/usr/include/openssl' -DBUILD_MONGO_DB_PLUGIN=true -DCMAKE_CXX_COMPILER='clang++' -DCMAKE_C_COMPILER='clang' /eos && make -j $(getconf _NPROCESSORS_ONLN)"
