--- a/.cicd/pipeline.yml
+++ b/.cicd/pipeline.yml
@@ -64,7 +64,7 @@ steps:
 
   - label: ":darwin: [Darwin] 10.14 Build"
     command:
-      - "brew install graphviz libtool gmp llvm@4 pkgconfig python python@2 doxygen libusb openssl boost@1.70"
+      - "brew install git graphviz libtool gmp llvm@4 pkgconfig python python@2 doxygen libusb openssl boost@1.70"
       - "git clone $BUILDKITE_HTTPS_REPO_URL eos && cd eos && git checkout $BUILDKITE_COMMIT && git submodule update --init --recursive"
       - "cd eos && mkdir build && cd build && cmake .. && make -j$(getconf _NPROCESSORS_ONLN)"
       - "cd eos/build && ctest -j$(getconf _NPROCESSORS_ONLN) -LE _tests --output-on-failure -T Test"
@@ -73,7 +73,7 @@ steps:
           no-volume: true
           inherit-environment-vars: true
           vm-name: 10.14.4_6C_14G_40G
-          vm-registry-tag: "clean::cicd::git-ssh::nas::xcode-10.2"
+          vm-registry-tag: "clean::cicd::git-ssh::nas::brew"
           modify-cpu: 12
           modify-ram: 24
           always-pull: true
