--- a/.cicd/base-images.yml
+++ b/.cicd/base-images.yml
@@ -6,10 +6,9 @@ env:
 
 steps:
 
-  - label: ":aws: [Amazon] 2 Build"
+  - label: ":aws: [Amazon] 2 Ensure Docker Image"
     command:
-      - "mkdir /workdir/build && cd /workdir/build && cmake -DCMAKE_BUILD_TYPE='Release' -DCORE_SYMBOL_NAME='SYS' -DOPENSSL_ROOT_DIR='/usr/include/openssl' -DBUILD_MONGO_DB_PLUGIN=true -DCMAKE_CXX_COMPILER='clang++' -DCMAKE_C_COMPILER='clang' /workdir && make -j $(getconf _NPROCESSORS_ONLN)"
-      - "cd /workdir/build && ctest -j$(getconf _NPROCESSORS_ONLN) -LE _tests --output-on-failure -T Test"
+      - "pwd"
     agents:
       queue: "automation-large-builder-fleet"
     plugins:
@@ -20,66 +19,66 @@ steps:
     timeout: $BUILD_TIMEOUT
     skip: $SKIP_AMAZON_LINUX_2
 
-  - label: ":centos: [CentOS] 7 Build"
-    command:
-      - "mkdir /workdir/build && cd /workdir/build && source /opt/rh/devtoolset-8/enable && source /opt/rh/rh-python36/enable && cmake -DCMAKE_BUILD_TYPE='Release' -DCORE_SYMBOL_NAME='SYS' -DOPENSSL_ROOT_DIR='/usr/include/openssl' -DBUILD_MONGO_DB_PLUGIN=true /workdir && make -j $(getconf _NPROCESSORS_ONLN)"
-      - "cd /workdir/build && ctest -j$(getconf _NPROCESSORS_ONLN) -LE _tests --output-on-failure -T Test"
-    agents:
-      queue: "automation-large-builder-fleet"
-    plugins:
-      - docker#v3.2.0:
-          shell: ["/bin/bash", "-i", "-e", "-c"]
-          debug: $DEBUG
-          image: "eosio/producer:ci-centos-7"
-    timeout: $BUILD_TIMEOUT
-    skip: $SKIP_CENTOS_7
+  # - label: ":centos: [CentOS] 7 Build"
+  #   command:
+  #     - "mkdir /workdir/build && cd /workdir/build && source /opt/rh/devtoolset-8/enable && source /opt/rh/rh-python36/enable && cmake -DCMAKE_BUILD_TYPE='Release' -DCORE_SYMBOL_NAME='SYS' -DOPENSSL_ROOT_DIR='/usr/include/openssl' -DBUILD_MONGO_DB_PLUGIN=true /workdir && make -j $(getconf _NPROCESSORS_ONLN)"
+  #     - "cd /workdir/build && ctest -j$(getconf _NPROCESSORS_ONLN) -LE _tests --output-on-failure -T Test"
+  #   agents:
+  #     queue: "automation-large-builder-fleet"
+  #   plugins:
+  #     - docker#v3.2.0:
+  #         shell: ["/bin/bash", "-i", "-e", "-c"]
+  #         debug: $DEBUG
+  #         image: "eosio/producer:ci-centos-7"
+  #   timeout: $BUILD_TIMEOUT
+  #   skip: $SKIP_CENTOS_7
 
-  - label: ":ubuntu: [Ubuntu] 16.04 Build"
-    command:
-      - "mkdir /workdir/build && cd /workdir/build && cmake -DCMAKE_BUILD_TYPE='Release' -DCORE_SYMBOL_NAME='SYS' -DOPENSSL_ROOT_DIR='/usr/include/openssl' -DBUILD_MONGO_DB_PLUGIN=true -DCMAKE_TOOLCHAIN_FILE='/tmp/pinned_toolchain.cmake' /workdir && make -j $(getconf _NPROCESSORS_ONLN)"
-      - "cd /workdir/build && ctest -j$(getconf _NPROCESSORS_ONLN) -LE _tests --output-on-failure -T Test"
-    agents:
-      queue: "automation-large-builder-fleet"
-    plugins:
-      - docker#v3.2.0:
-          shell: ["/bin/bash", "-i", "-e", "-c"]
-          debug: $DEBUG
-          image: "eosio/producer:ci-ubuntu-16.04"
-    timeout: $BUILD_TIMEOUT
-    skip: $SKIP_UBUNTU_16
+  # - label: ":ubuntu: [Ubuntu] 16.04 Build"
+  #   command:
+  #     - "mkdir /workdir/build && cd /workdir/build && cmake -DCMAKE_BUILD_TYPE='Release' -DCORE_SYMBOL_NAME='SYS' -DOPENSSL_ROOT_DIR='/usr/include/openssl' -DBUILD_MONGO_DB_PLUGIN=true -DCMAKE_TOOLCHAIN_FILE='/tmp/pinned_toolchain.cmake' /workdir && make -j $(getconf _NPROCESSORS_ONLN)"
+  #     - "cd /workdir/build && ctest -j$(getconf _NPROCESSORS_ONLN) -LE _tests --output-on-failure -T Test"
+  #   agents:
+  #     queue: "automation-large-builder-fleet"
+  #   plugins:
+  #     - docker#v3.2.0:
+  #         shell: ["/bin/bash", "-i", "-e", "-c"]
+  #         debug: $DEBUG
+  #         image: "eosio/producer:ci-ubuntu-16.04"
+  #   timeout: $BUILD_TIMEOUT
+  #   skip: $SKIP_UBUNTU_16
 
-  - label: ":ubuntu: [Ubuntu] 18.04 Build"
-    command:
-      - "mkdir /workdir/build && cd /workdir/build && cmake -DCMAKE_BUILD_TYPE='Release' -DCORE_SYMBOL_NAME='SYS' -DOPENSSL_ROOT_DIR='/usr/include/openssl' -DBUILD_MONGO_DB_PLUGIN=true /workdir && make -j $(getconf _NPROCESSORS_ONLN)"
-      - "cd /workdir/build && ctest -j$(getconf _NPROCESSORS_ONLN) -LE _tests --output-on-failure -T Test"
-    agents:
-      queue: "automation-large-builder-fleet"
-    plugins:
-      - docker#v3.2.0:
-          shell: ["/bin/bash", "-i", "-e", "-c"]
-          debug: $DEBUG
-          image: "eosio/producer:ci-ubuntu-18.04"
-    timeout: $BUILD_TIMEOUT
-    skip: $SKIP_UBUNTU_18
+  # - label: ":ubuntu: [Ubuntu] 18.04 Build"
+  #   command:
+  #     - "mkdir /workdir/build && cd /workdir/build && cmake -DCMAKE_BUILD_TYPE='Release' -DCORE_SYMBOL_NAME='SYS' -DOPENSSL_ROOT_DIR='/usr/include/openssl' -DBUILD_MONGO_DB_PLUGIN=true /workdir && make -j $(getconf _NPROCESSORS_ONLN)"
+  #     - "cd /workdir/build && ctest -j$(getconf _NPROCESSORS_ONLN) -LE _tests --output-on-failure -T Test"
+  #   agents:
+  #     queue: "automation-large-builder-fleet"
+  #   plugins:
+  #     - docker#v3.2.0:
+  #         shell: ["/bin/bash", "-i", "-e", "-c"]
+  #         debug: $DEBUG
+  #         image: "eosio/producer:ci-ubuntu-18.04"
+  #   timeout: $BUILD_TIMEOUT
+  #   skip: $SKIP_UBUNTU_18
 
-  - label: ":darwin: [Darwin] 10.14 Build"
-    command:
-      - "brew install git graphviz libtool gmp llvm@4 pkgconfig python python@2 doxygen libusb openssl boost@1.70 cmake"
-      - "git clone $BUILDKITE_REPO eos && cd eos && git checkout $BUILDKITE_COMMIT && git submodule update --init --recursive"
-      - "cd eos && mkdir build && cd build && cmake .. && make -j$(getconf _NPROCESSORS_ONLN)"
-      - "cd eos/build && ctest -j$(getconf _NPROCESSORS_ONLN) -LE _tests --output-on-failure -T Test"
-    plugins:
-      - chef/anka#v0.5.1:
-          no-volume: true
-          inherit-environment-vars: true
-          vm-name: 10.14.4_6C_14G_40G
-          vm-registry-tag: "clean::cicd::git-ssh::nas::brew"
-          modify-cpu: 12
-          modify-ram: 24
-          always-pull: true
-          debug: true
-          wait-network: true
-    agents:
-      - "queue=mac-anka-large-node-fleet"
-    timeout: $BUILD_TIMEOUT
-    skip: $SKIP_MOJAVE
+  # - label: ":darwin: [Darwin] 10.14 Build"
+  #   command:
+  #     - "brew install git graphviz libtool gmp llvm@4 pkgconfig python python@2 doxygen libusb openssl boost@1.70 cmake"
+  #     - "git clone $BUILDKITE_REPO eos && cd eos && git checkout $BUILDKITE_COMMIT && git submodule update --init --recursive"
+  #     - "cd eos && mkdir build && cd build && cmake .. && make -j$(getconf _NPROCESSORS_ONLN)"
+  #     - "cd eos/build && ctest -j$(getconf _NPROCESSORS_ONLN) -LE _tests --output-on-failure -T Test"
+  #   plugins:
+  #     - chef/anka#v0.5.1:
+  #         no-volume: true
+  #         inherit-environment-vars: true
+  #         vm-name: 10.14.4_6C_14G_40G
+  #         vm-registry-tag: "clean::cicd::git-ssh::nas::brew"
+  #         modify-cpu: 12
+  #         modify-ram: 24
+  #         always-pull: true
+  #         debug: true
+  #         wait-network: true
+  #   agents:
+  #     - "queue=mac-anka-large-node-fleet"
+  #   timeout: $BUILD_TIMEOUT
+  #   skip: $SKIP_MOJAVE
