no need for build

--- a/.cicd/base-images.yml
+++ b/.cicd/base-images.yml
@@ -8,7 +8,7 @@ steps:
 
   - label: ":aws: [Amazon] 2 Ensure Docker Image"
     command:
-      - "pwd"
+      - "/workdir/.cicd/generate-base-images.sh"
     agents:
       queue: "automation-large-builder-fleet"
     plugins:
