--- a/.cicd/pipeline.yml
+++ b/.cicd/pipeline.yml
@@ -8,9 +8,12 @@ steps:
 
   - trigger: "eosio-base-images-beta"
     label: ":docker: Ensure base images exist"
-
+    build:
+      commit: "${BUILDKITE_COMMIT}"
+      branch: "${BUILDKITE_BRANCH}"
+      
   - wait
-  
+
   - label: ":aws: [Amazon] 2 Build"
     command:
       - "mkdir /workdir/build && cd /workdir/build && cmake -DCMAKE_BUILD_TYPE='Release' -DCORE_SYMBOL_NAME='SYS' -DOPENSSL_ROOT_DIR='/usr/include/openssl' -DBUILD_MONGO_DB_PLUGIN=true -DCMAKE_CXX_COMPILER='clang++' -DCMAKE_C_COMPILER='clang' /workdir && make -j $(getconf _NPROCESSORS_ONLN)"
