--- a/.travis.yml
+++ b/.travis.yml
@@ -46,7 +46,7 @@ matrix:
             - boost@1.70
             - ccache
       env: 
-        - PATH='/foo/bar/fizz:$PATH'
+        - PATH="/foo/bar/fizz:$PATH"
 script: |
   #./.cicd/travis-build.sh
   echo "$PATH"
