--- a/pipeline.jsonc
+++ b/pipeline.jsonc
@@ -23,7 +23,7 @@
         {
             "SKIP_PRE_V180": "true",
             "SKIP_V180": "true",
-            "SKIP_V200": "false,"
+            "SKIP_V200": "false"
         }
     },
     "eosio-replay-tests":
