basic outgoing RPC calls

--- a/plugins/launcher_service_plugin/CMakeLists.txt
+++ b/plugins/launcher_service_plugin/CMakeLists.txt
@@ -1,6 +1,7 @@
 file(GLOB HEADERS "include/eosio/launcher_service_plugin/*.hpp")
 add_library( launcher_service_plugin
              launcher_service_plugin.cpp
+             httpc.cpp
              ${HEADERS} )
 
 target_link_libraries( launcher_service_plugin appbase fc chain_plugin http_plugin appbase )
