last vestiges of intrinsic logger and disable building of tools and tests for eos-vm

--- a/libraries/CMakeLists.txt
+++ b/libraries/CMakeLists.txt
@@ -16,10 +16,11 @@ set(WITH_EXCEPTIONS ON CACHE BOOL "Build with exceptions enabled" FORCE)
 add_subdirectory( wabt )
 
 set(USE_EXISTING_SOFTFLOAT ON CACHE BOOL "use pre-exisiting softfloat lib")
-set(ENABLE_TESTS OFF)
-set(ENABLE_ADDRESS_SANITIZER OFF)
-set(ENABLE_UNDEFINED_BEHAVIOR_SANITIZER OFF)
-set(ENABLE_PROFILE OFF)
+set(ENABLE_TOOLS OFF CACHE BOOL "Build tools")
+set(ENABLE_TESTS OFF CACHE BOOL "Build tests")
+set(ENABLE_ADDRESS_SANITIZER OFF CACHE BOOL "Use address sanitizer")
+set(ENABLE_UNDEFINED_BEHAVIOR_SANITIZER OFF CACHE BOOL "Use UB sanitizer")
+set(ENABLE_PROFILE OFF CACHE BOOL "Enable for profile builds")
 add_subdirectory( eos-vm )
 
 set(ENABLE_STATIC ON)
