Fix build message passed to Travis API during trigger step

--- a/.cicd/pipeline.yml
+++ b/.cicd/pipeline.yml
@@ -5,10 +5,11 @@ env:
   VERBOSE: true
 
 steps:
+  - wait
 
   - label: ":webhook: Trigger Travis CI Build"
-    command:
-      - "./.cicd/travis-trigger.sh"
+    command: |
+      . ./.cicd/trigger-travis.sh
     agents:
       queue: "automation-eos-builder-fleet"
 
