Pass env to control builds to triggered build.

--- a/.cicd/pipeline.yml
+++ b/.cicd/pipeline.yml
@@ -109,6 +109,8 @@ steps:
     build:
       commit: "${BUILDKITE_COMMIT}"
       branch: "${BUILDKITE_BRANCH}"
+      env:
+        FORCE_BINARIES_BUILD: "${FORCE_BINARIES_BUILD}"
     async: true
 
   # - wait
