init swap by api

--- a/block_producer_swap_bot/config.ini
+++ b/block_producer_swap_bot/config.ini
@@ -1,5 +1,6 @@
 [NODES]
-cleos=cleos --url http://206.189.139.101:8000 --wallet-url http://206.189.139.101:6666
-eth-provider=wss://rinkeby.infura.io/ws/v3/3f98ae6029094659ac8f57f66e673129
+remnode=127.0.0.1:8888
+eth-provider=wss://ropsten.infura.io/ws/v3/<your infura id>
 [REM]
-block-producer-permission=producer111b@active
+block-producer-permission=<your account name>@active
+block-producer-private-key=<your private key for signing blocks>
