Added another version 2 snapshot to test having a pending production schedule.

--- a/unittests/snapshots.hpp.in
+++ b/unittests/snapshots.hpp.in
@@ -15,6 +15,7 @@ namespace eosio {
       struct snapshots {
          // v2
          MAKE_READ_SNAPSHOT(snap_v2)
+         MAKE_READ_SNAPSHOT(snap_v2_prod_sched)
       };
    } /// eosio::testing
 }  /// eosio
