Change to contracts base images beta pipeline trigger.

--- a/.cicd/pipeline.yml
+++ b/.cicd/pipeline.yml
@@ -101,11 +101,9 @@ steps:
       queue: "automation-eos-builder-fleet"
     timeout: 10
     soft_fail: true
-
-  - wait
   
-  - trigger: "eosio-installation-images"
-    label: ":docker: Start EOS Installation Pipeline"
+  - trigger: "eosio-dot-contracts-base-images-beta"
+    label: ":docker: Create eosio.contracts Base Image"
     build:
       commit: "${BUILDKITE_COMMIT}"
       branch: "${BUILDKITE_BRANCH}"
