--- a/.cicd/pipeline.yml
+++ b/.cicd/pipeline.yml
@@ -148,7 +148,7 @@ steps:
     agents:
       queue: "automation-eos-builder-fleet"
     timeout: ${TIMEOUT:-10}
-    skip: "[[ $SKIP_AMAZON_LINUX_2 == true ]] || [[ $SKIP_LRT == true ]]"
+    skip: "[[ $SKIP_AMAZON_LINUX_2 == true ]] || [[ $SKIP_LONG_RUNNING_TESTS == true ]]"
 
   - label: ":centos: CentOS 7.6 - Long-Running Tests"
     command:
@@ -160,7 +160,7 @@ steps:
     agents:
       queue: "automation-eos-builder-fleet"
     timeout: ${TIMEOUT:-10}
-    skip: "[[ $SKIP_CENTOS_7 == true ]] || [[ $SKIP_LRT == true ]]"
+    skip: "[[ $SKIP_CENTOS_7 == true ]] || [[ $SKIP_LONG_RUNNING_TESTS == true ]]"
 
   - label: ":ubuntu: Ubuntu 16.04 - Long-Running Tests"
     command:
@@ -172,7 +172,7 @@ steps:
     agents:
       queue: "automation-eos-builder-fleet"
     timeout: ${TIMEOUT:-10}
-    skip: "[[ $SKIP_UBUNTU_16 == true ]] || [[ $SKIP_LRT == true ]]"
+    skip: "[[ $SKIP_UBUNTU_16 == true ]] || [[ $SKIP_LONG_RUNNING_TESTS == true ]]"
 
   - label: ":ubuntu: Ubuntu 18.04 - Long-Running Tests"
     command:
@@ -184,7 +184,7 @@ steps:
     agents:
       queue: "automation-eos-builder-fleet"
     timeout: ${TIMEOUT:-10}
-    skip: "[[ $SKIP_UBUNTU_18 == true ]] || [[ $SKIP_LRT == true ]]"
+    skip: "[[ $SKIP_UBUNTU_18 == true ]] || [[ $SKIP_LONG_RUNNING_TESTS == true ]]"
 
   - label: ":darwin: macOS 10.14 - Long-Running Tests"
     command:
