--- a/libraries/wasm-jit/Source/Runtime/CMakeLists.txt
+++ b/libraries/wasm-jit/Source/Runtime/CMakeLists.txt
@@ -1,18 +1,26 @@
 set(Sources
 	Intrinsics.cpp
 	Linker.cpp
-	LLVMEmitIR.cpp
-	LLVMJIT.cpp
 	LLVMJIT.h
-	Memory.cpp
-	ModuleInstance.cpp
 	ObjectGC.cpp
-	Runtime.cpp
 	RuntimePrivate.h
-	Table.cpp
 	Threads.cpp
 	WAVMIntrinsics.cpp
   )
+
+if("wavm" IN_LIST EOSIO_WASM_RUNTIMES)
+  list(APPEND Sources
+     LLVMEmitIR.cpp
+     LLVMJIT.cpp
+     Memory.cpp
+     ModuleInstance.cpp
+     Runtime.cpp
+     Table.cpp
+  )
+  find_package(LLVM 4.0 REQUIRED CONFIG)
+  llvm_map_components_to_libnames(LLVM_LIBS support core passes mcjit native DebugInfoDWARF)
+endif()
+
 set(PublicHeaders
 	${WAVM_INCLUDE_DIR}/Runtime/Intrinsics.h
 	${WAVM_INCLUDE_DIR}/Runtime/Linker.h
@@ -22,9 +30,6 @@ include_directories(${WAVM_INCLUDE_DIR}/Runtime)
 
 add_library(Runtime STATIC ${Sources} ${PublicHeaders})
 
-# Find an installed build of LLVM
-find_package(LLVM 4.0 REQUIRED CONFIG)
-
 # Include the LLVM headers
 include_directories(${LLVM_INCLUDE_DIRS})
 add_definitions(${LLVM_DEFINITIONS})
@@ -33,8 +38,6 @@ add_definitions(-DRUNTIME_API=DLL_EXPORT)
 
 target_include_directories( Runtime PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../../../chain/include )
 
-# Link against the LLVM libraries
-llvm_map_components_to_libnames(LLVM_LIBS support core passes mcjit native DebugInfoDWARF)
 target_link_libraries(Runtime Platform Logging IR ${LLVM_LIBS})
 
 install(TARGETS Runtime 
