--- a/CMakeModules/EosioTesterBuild.cmake.in
+++ b/CMakeModules/EosioTesterBuild.cmake.in
@@ -18,9 +18,18 @@ if( GPERFTOOLS_FOUND )
     list( APPEND PLATFORM_SPECIFIC_LIBS tcmalloc )
 endif()
 
-find_package(LLVM 4.0 REQUIRED CONFIG)
-
-link_directories(${LLVM_LIBRARY_DIR})
+if(NOT "@LLVM_FOUND@" STREQUAL "")
+   find_package(LLVM @LLVM_VERSION_MAJOR@ REQUIRED CONFIG)
+   link_directories(${LLVM_LIBRARY_DIR})
+   set(LLVM_LIBRARIES ${LLVM}
+                 LLVMX86Disassembler LLVMX86AsmParser LLVMX86AsmPrinter LLVMX86CodeGen
+                 LLVMSelectionDAG
+                 LLVMDebugInfoDWARF LLVMAsmPrinter LLVMMCParser LLVMX86Info
+                 LLVMOrcJIT LLVMExecutionEngine
+                 LLVMCodeGen LLVMScalarOpts LLVMTransformUtils
+                 LLVMipo LLVMAnalysis LLVMTarget LLVMMC LLVMCore LLVMSupport
+                 )
+endif()
 
 set( CMAKE_CXX_STANDARD 17 )
 set( CMAKE_CXX_EXTENSIONS ON )
@@ -76,7 +85,6 @@ find_library(GMP_LIBRARIES NAMES libgmp.a gmp.lib gmp libgmp-10 mpir
 macro(add_eosio_test_executable test_name)
    add_executable( ${test_name} ${ARGN} )
    target_link_libraries( ${test_name}
-       ${LLVM}
        ${libtester}
        ${libchain}
        ${libfc}
@@ -95,31 +103,8 @@ macro(add_eosio_test_executable test_name)
        ${libsecp256k1}
        ${GMP_LIBRARIES}
 
-       LLVMX86Disassembler
-       LLVMX86AsmParser
-       LLVMX86AsmPrinter
-       LLVMX86CodeGen
+       ${LLVM_LIBRARIES}
 
-       LLVMSelectionDAG
-
-       LLVMDebugInfoDWARF
-       LLVMAsmPrinter
-       LLVMMCParser
-       LLVMX86Info
-
-       LLVMOrcJIT
-       LLVMExecutionEngine
-
-       LLVMCodeGen
-       LLVMScalarOpts
-       LLVMTransformUtils
-
-       LLVMipo
-       LLVMAnalysis
-       LLVMTarget
-       LLVMMC
-       LLVMCore
-       LLVMSupport
        ${Boost_FILESYSTEM_LIBRARY}
        ${Boost_SYSTEM_LIBRARY}
        ${Boost_CHRONO_LIBRARY}
